--- a/_posts/2025-09-01-Welcome.md
+++ b/_posts/2025-09-01-Welcome.md
@@ -9,6 +9,6 @@ simplify the installation and update of Kodi TTS. Since Kodi TTS is not yet rele
 it can not be part of the Official Kodi Repository.
 
 This site also contains Documentation for Kodi TTS. The Table of Contents can be found
-[here](CONTENTS).
+[here](https://feuerbacher.us/repo/CONTENTS.html).
 
-Finally, this site also serves as a blog where I can post updates about the project.
+Finally, this site also serves as a blog where I can post updates about the project.`
